--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>chindex</title>
+    <title>程晓煊</title>
+    <!-- <link rel="icon" href="picture.ico" type="image/x-icon"/>   -->
   </head>
   <body>
     <div id="app"></div>
     <!-- built files will be auto injected -->
   </body>
+
 </html>
